# katago-ws

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  build.rs  docker-compose.yml  justfile  muxa.toml
.github/workflows/: deploy.yml  image.yml
deploy/cloudflare/: README.md  package-lock.json  package.json  wrangler.jsonc
deploy/cloudflare/src/: index.ts
deploy/coolify/: README.md  docker-compose.yml
deploy/split/: README.md  local.compose.yml  orchestrator.compose.yml  worker.compose.yml
migrations/2026-05-30-000000_create_job_store/: down.sql  up.sql
proto/: cluster.proto
src/: config.rs  error.rs  main.rs  metrics.rs  queue.rs  worker.rs
src/cluster/: client.rs  message.rs  mod.rs  registry.rs  server.rs
src/db/: mod.rs  models.rs  schema.rs  status.rs
src/engine/: annotate.rs  katago.rs  mod.rs  sgf.rs
src/http/: dto.rs  handlers.rs  mod.rs
