[package]
name = "katago-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
# muxa framework (local): web + diesel(async pg) + pgmq + otel + sentry + openapi
# + diesel-migrations (MigrationsRunner runs the embedded migrations at startup).
muxa = { path = "../muxa/crates/muxa", features = [
    "web", "ratelimit", "diesel", "diesel-migrations", "diesel-sentry", "pgmq", "sentry", "openapi",
    # OpenTelemetry: OTLP export over gRPC of traces (+ the tracing→OTel bridge),
    # metrics, and logs. Endpoint configured via `[otel].endpoint`.
    "otel", "otel-otlp-tonic", "otel-tracing-bridge", "otel-metrics", "otel-logs",
] }
# pgmq fork (local), same path muxa-pgmq depends on — one pgmq in the graph.
# Used directly for the `Message`/`Queue` API in `queue.rs`.
pgmq = { path = "../pgmq/pgmq-rs", default-features = false, features = ["diesel-async"] }
# SGF parsing — used to build the KataGo move list + game metadata.
sgf-parser = "2"

# Orchestrator↔worker control plane over WebSocket (the `orchestrator` and
# `worker` roles; see `src/cluster/`). The orchestrator serves the socket on its
# existing axum web server (axum's `ws` feature); a worker dials it with
# `tokio-tungstenite` (rustls + bundled webpki roots, so `wss://` works behind a
# TLS terminator like Cloudflare with no system OpenSSL). `rustls` is a direct dep
# only to install a process-default crypto provider at worker startup.
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
rustls = "0.23"
futures-util = "0.3"
# Shared-secret auth token for the (now public) cluster socket — kept redacted.
secrecy = { version = "0.10", features = ["serde"] }

# OpenAPI: aide comes through `muxa::aide` (the facade re-export) — no direct
# dep. muxa-openapi enables the features we use (axum/axum-json/axum-query/macros),
# and the `OperationIo` derive resolves its `aide::` paths via `use muxa::aide`.
# schemars supplies the `JsonSchema` derive; async-stream powers the SSE handler.
schemars = { version = "1", features = ["derive"] }
async-stream = "0.3"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
# `Stream` trait for the SSE response type; `sync` adds `ReceiverStream`, used to
# bridge the orchestrator's per-worker job channel into the WebSocket writer.
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

diesel = { version = "2", default-features = false, features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.9", default-features = false, features = ["postgres", "deadpool"] }
# Maps the Postgres `job_status` enum to the Rust `JobStatus` enum (the `jobs`
# view exposes status as this enum, not text).
diesel-derive-enum = { version = "2", features = ["postgres"] }
# Needed directly because `embed_migrations!()` expands to `diesel_migrations::`
# paths in this crate; the version unifies with muxa-diesel's.
diesel_migrations = "2"

# Fast multithreaded allocator.
mimalloc = "0.1"

# Time-ordered (v7) job ids are minted by Postgres (the `uuidv7()` DEFAULT), so
# this crate is only needed for the `Uuid` type + serde — no client-side gen.
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"

# A curated subset of clippy's `restriction` group. The group as a whole is too
# noisy to enforce (clippy itself recommends enabling these individually), so we
# pick the genuinely useful ones. Only active under `cargo clippy`.
[lints.clippy]
# Panic safety (tests are exempted via clippy.toml's allow-unwrap-in-tests).
unwrap_used = "warn"
# No debug/placeholder leftovers; use `tracing`, not stdout/stderr.
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
exit = "warn"
mem_forget = "warn"
# Small correctness wins.
lossy_float_literal = "warn"
fn_to_numeric_cast_any = "warn"
map_err_ignore = "warn"
# Clarity / consistency.
clone_on_ref_ptr = "warn"
str_to_string = "warn"
min_ident_chars = "warn"
unused_trait_names = "warn"
allow_attributes_without_reason = "warn"
# Nudge away from needless restricted visibility — prefer `pub` or private over a
# redundant `pub(crate)`.
redundant_pub_crate = "warn"
